force-app/main/default/objects/Storage_Profile__c/Storage_Profile__c.object-meta.xml
<CustomObject>
    <description>Object used to capture which vendor controls existing cube and tape at an account</description>
    <label>Competitor Storage Profile</label>
    <nameField>
        <displayFormat>StorageProfile-{0000}</displayFormat>
        <label>Storage Profile Name (cust-vendor-type)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Storage Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>