force-app/main/default/objects/Storage_Profile__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>IMGA Account record</description>
    <label>Customer</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Storage Profile records can only be associated to an IMGA record</errorMessage>
        <filterItems>
            <field>Account.IM_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>IM Group (IMGA)</value>
        </filterItems>
        <infoMessage>Storage Profile records can only be associated to an IMGA record</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Storage_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>