force-app/main/default/objects/Storage_Profile__c/fields/Iron_Mountain_Storage_Profile__c.field-meta.xml
<CustomField>
    <fullName>Iron_Mountain_Storage_Profile__c</fullName>
    <label>Iron Mountain Storage Profile</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Iron_Mountain_Storage_Profile__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Iron_Mountain_Storage_Profile__c</referenceTo>
    <relationshipLabel>Competitor Storage Profiles</relationshipLabel>
    <relationshipName>Storage_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>