force-app/main/default/objects/Storage_Profile__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Enter the total number of cube, tapes or DB&amp;R containers serviced by this vendor</inlineHelpText>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>