force-app/main/default/objects/Storage_Profile__c/fields/Quantity_DB_R_Container__c.field-meta.xml
<CustomField>
    <fullName>Quantity_DB_R_Container__c</fullName>
    <label>Quantity (DB&amp;R Container)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>