force-app/main/default/objects/Storage_Profile__c/fields/Quantity_Tape__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Tape__c</fullName>
    <label>Quantity (Tape)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>