force-app/main/default/objects/Storage_Profile__c/fields/Record_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Record ID (18 Digit)</label>
    <type>Text</type>
</CustomField>