force-app/main/default/objects/Storage_Profile__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cube</fullName>
            </value>
            <value>
                <fullName>DB&amp;R Container</fullName>
            </value>
            <value>
                <fullName>Tape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>