force-app/main/default/objects/Storage_Profile__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Competitors table</description>
    <inlineHelpText>Search for the competitor&apos;s name. If Iron Mountain owns this storage business search for Iron Mountain. If this is un-vended search for InHouse</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipName>Storage_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>